chore: changes to classes and methods